welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
  def fairePtitMotif(){
  	for (i <- 1 to 4){
      avance()
        baisseBrosse();leveBrosse();
      avance()
      gauche()
      avance()
        baisseBrosse();leveBrosse();
      recule()
      droite()
      avance()
        baisseBrosse();leveBrosse();
      avance();avance() 
    }
  }

  faireMotif()
}

